# Renting-V-Owning

./: README.md  app.js  index.html  pyproject.toml  styles.css
src/rent_vs_own/: __init__.py  cli.py  data_sources.py  model.py  schemas.py
